[package]
name = "traceroute"
version = "0.1.0"
description = "Traceroute compliant with RIPE Atlas probes"
authors = ["Jasper den Hertog <jasper@plainspace.com>"]
readme = "README.md"
repository = "https://github.com/density215/atlas-traceroute"
keywords = ["traceroute", "ripe atlas"]

[dependencies]
#socket2 = { path = "socket2-rs" }
socket2 = "0.3.8"
pnet = { path = "libpnet" }
#pnet = "0.21.0"
ipnetwork = "0.12.7"
rand = "0.3"
time = "0.1"
dns-lookup="0.8.1"
hex-slice = "0.1.1"
serde = "1.0.79"
serde_json = "1.0.28"
serde_derive = "1.0.79"
structopt = "0.2.13"