[package]
name = 'traceroute'
version = '0.2.0'
description = 'Traceroute compliant with RIPE Atlas probes'
authors = ['Jasper den Hertog <jasper@plainspace.com>']
readme = 'README.md'
repository = 'https://github.com/density215/atlas-traceroute'
keywords = [
    'traceroute',
    'ripe atlas',
]
edition = '2018'

[dependencies]
socket2 = '0.3'
rand = '0.3'
time = '0.1'
dns-lookup = '0.8'
hex-slice = '0.1'
serde_json = '1.0'
serde_derive = '1.0'
structopt = '0.2.18'
byteorder = '1.3.2'
iovec = '0.1.1'
mio = '0.6.20'
once_cell = '1.2.0'
slab = '0.4.2'
futures = '0.3.0'

[dependencies.pnet]
git = 'https://github.com/density215/libpnet'

[dependencies.async-std]
version = '1.1'
features = ['unstable']

[dependencies.serde]
version = '1.0'
features = ['derive']
[target."cfg(unix)".dependencies]
libc = '0.2.62'
[replace."mio:0.6.20"]
path = 'mio_release'
